mark dscs and cscas for deletion instead of direct delete (part2)